--- a/app/src/main/res/layout/fragment_event_next.xml
+++ b/app/src/main/res/layout/fragment_event_next.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".fragment.FragmentEventNext">
+    tools:context=".fragment.FragmentMatch.FragmentEventNext">
 
     <ProgressBar
         android:id="@+id/pgBarNext"
