--- a/app/src/main/res/layout/fragment_event_past.xml
+++ b/app/src/main/res/layout/fragment_event_past.xml
@@ -11,6 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
+        android:backgroundTint="@color/background"
         android:visibility="invisible" />
 
     <android.support.v4.widget.SwipeRefreshLayout
