--- a/app/src/main/res/layout/fragment_event_past.xml
+++ b/app/src/main/res/layout/fragment_event_past.xml
@@ -4,14 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".fragment.FragmentMatch.FragmentEventPast">
+    tools:context=".fragment.fragmentEvent.FragmentEventPast">
 
     <ProgressBar
         android:id="@+id/pgBarPast"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:backgroundTint="@color/background"
+        android:indeterminateDrawable="@drawable/progress_bar"
         android:visibility="invisible" />
 
     <android.support.v4.widget.SwipeRefreshLayout
