--- a/app/src/main/res/layout/fragment_teams.xml
+++ b/app/src/main/res/layout/fragment_teams.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".fragment.FragmentTeams">
+    tools:context=".fragment.fragmentTeam.FragmentTeams">
 
       <ProgressBar
         android:id="@+id/pgBarTeam"
