--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -2,4 +2,7 @@
 <resources>
     <item name="team_badge" type="id">id</item>
     <item name="team_name" type="id">id</item>
+    <item name="img_Club" type="id">id</item>
+    <item name="txt_NameClub" type="id">id</item>
+    <item name="txt_Formasi" type="id">id</item>
 </resources>
