final project ready for submit

--- a/app/src/main/res/layout/activity_detail_team.xml
+++ b/app/src/main/res/layout/activity_detail_team.xml
@@ -60,7 +60,7 @@
                     android:layout_below="@+id/txt_clubName"
                     android:gravity="center"
                     android:textColor="@android:color/white"
-                    android:text="1889" />
+                    tools:text="1889" />
 
             </RelativeLayout>
         </android.support.design.widget.CollapsingToolbarLayout>
