--- a/app/src/main/res/layout/fragment_teams.xml
+++ b/app/src/main/res/layout/fragment_teams.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".fragment.fragmentTeam.FragmentTeams">
 
@@ -10,18 +11,30 @@
         android:id="@+id/pgBarTeam"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
         android:visibility="invisible" />
 
         <android.support.v4.widget.SwipeRefreshLayout
             android:id="@+id/swipeTeams"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/img_searchTeam"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:padding="20dp"
+                app:srcCompat="@drawable/ic_search_black_24dp" />
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rvTeam"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
+            </LinearLayout>
         </android.support.v4.widget.SwipeRefreshLayout>
 
 
