--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -7,17 +7,17 @@
         <item
             android:id="@+id/nav_nextEvent"
             android:icon="@drawable/ic_nextmatch"
-            android:title="Home" />
+            android:title="@string/home" />
 
         <item
             android:id="@+id/nav_favorite"
             android:icon="@drawable/ic_favourite"
-            android:title="Favorite" />
+            android:title="@string/favorite" />
 
         <item
             android:id="@+id/nav_teams"
             android:icon="@drawable/ic_team"
-            android:title="Teams" />
+            android:title="@string/teams" />
 
     </group>
 
